src/objects/TestCo_Account__x.object
<CustomObject>
    <externalDataSource>TestCo</externalDataSource>
    <externalName>Account</externalName>
    <fields>
        <fullName>Access_c__c</fullName>
        <externalDeveloperName>Access__c</externalDeveloperName>
        <label>Access#</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <externalDeveloperName>AccountNumber</externalDeveloperName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <externalDeveloperName>AccountSource</externalDeveloperName>
        <label>Account Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Billing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_c__c</fullName>
        <externalDeveloperName>Branch__c</externalDeveloperName>
        <label>Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <externalDeveloperName>CurrencyIsoCode</externalDeveloperName>
        <label>Account Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_pc__c</fullName>
        <externalDeveloperName>Customer_Account__pc</externalDeveloperName>
        <label>Customer Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_pc__c</fullName>
        <externalDeveloperName>Date_of_Birth__pc</externalDeveloperName>
        <label>Date of Birth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Account Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Text_c__c</fullName>
        <externalDeveloperName>Email_Text__c</externalDeveloperName>
        <label>Email Text</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Account Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV_Billing_Address_Validation_Statu__c</fullName>
        <externalDeveloperName>INFA_AV__Billing_Address_Validation_Status__c</externalDeveloperName>
        <label>Billing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV_Mailing_Address_Validation_Statu__c</fullName>
        <externalDeveloperName>INFA_AV__Mailing_Address_Validation_Status__pc</externalDeveloperName>
        <label>Mailing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV_Other_Address_Validation_Status__c</fullName>
        <externalDeveloperName>INFA_AV__Other_Address_Validation_Status__pc</externalDeveloperName>
        <label>Other Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV_Shipping_Address_Validation_Stat__c</fullName>
        <externalDeveloperName>INFA_AV__Shipping_Address_Validation_Status__c</externalDeveloperName>
        <label>Shipping Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCustomerPortal</externalDeveloperName>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPartner</externalDeveloperName>
        <label>Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>Is Person Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>Jigsaw Company ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities_c__c</fullName>
        <externalDeveloperName>Open_Opportunities__c</externalDeveloperName>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAssistantName__c</fullName>
        <externalDeveloperName>PersonAssistantName</externalDeveloperName>
        <label>Assistant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAssistantPhone__c</fullName>
        <externalDeveloperName>PersonAssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonBirthdate__c</fullName>
        <externalDeveloperName>PersonBirthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonContactId__c</fullName>
        <externalDeveloperName>PersonContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonDepartment__c</fullName>
        <externalDeveloperName>PersonDepartment</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedDate__c</fullName>
        <externalDeveloperName>PersonEmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedReason__c</fullName>
        <externalDeveloperName>PersonEmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonEmail__c</fullName>
        <externalDeveloperName>PersonEmail</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PersonHomePhone__c</fullName>
        <externalDeveloperName>PersonHomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonLastCURequestDate__c</fullName>
        <externalDeveloperName>PersonLastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonLastCUUpdateDate__c</fullName>
        <externalDeveloperName>PersonLastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonLeadSource__c</fullName>
        <externalDeveloperName>PersonLeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingAddress__c</fullName>
        <externalDeveloperName>PersonMailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonMailingCity__c</fullName>
        <externalDeveloperName>PersonMailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingCountry__c</fullName>
        <externalDeveloperName>PersonMailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>PersonMailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingLatitude__c</fullName>
        <externalDeveloperName>PersonMailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonMailingLongitude__c</fullName>
        <externalDeveloperName>PersonMailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonMailingPostalCode__c</fullName>
        <externalDeveloperName>PersonMailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingState__c</fullName>
        <externalDeveloperName>PersonMailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <externalDeveloperName>PersonMailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <externalDeveloperName>PersonMobilePhone</externalDeveloperName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherAddress__c</fullName>
        <externalDeveloperName>PersonOtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonOtherCity__c</fullName>
        <externalDeveloperName>PersonOtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherCountry__c</fullName>
        <externalDeveloperName>PersonOtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>PersonOtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherLatitude__c</fullName>
        <externalDeveloperName>PersonOtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherLongitude__c</fullName>
        <externalDeveloperName>PersonOtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <externalDeveloperName>PersonOtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPostalCode__c</fullName>
        <externalDeveloperName>PersonOtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherState__c</fullName>
        <externalDeveloperName>PersonOtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherStreet__c</fullName>
        <externalDeveloperName>PersonOtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonTitle__c</fullName>
        <externalDeveloperName>PersonTitle</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>Shipping Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>Shipping Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <externalDeveloperName>SicDesc</externalDeveloperName>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <externalDeveloperName>Sic</externalDeveloperName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier_c__c</fullName>
        <externalDeveloperName>Tier__c</externalDeveloperName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_c__c</fullName>
        <externalDeveloperName>Top_Level__c</externalDeveloperName>
        <label>Top Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Account Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>TestCo Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>TestCo Accounts</pluralLabel>
</CustomObject>